[package]
name = "rustdbadmin"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lunarust/rust_postgres_dbadmin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
clap = "~2.31"
rand="0.8.5"
postgres = "0.19.3"
